Fix canvas overflow

--- a/ui/style/main.css
+++ b/ui/style/main.css
@@ -226,6 +226,7 @@ main {
   display: grid;
   grid-template-rows: auto 1fr 1fr;
   grid-template-columns: 1fr 1fr auto;
+  overflow: hidden;
   height: 100%;
 }
 
